algoFramework, eclat and declat

--- a/c/makefile
+++ b/c/makefile
@@ -1,8 +1,9 @@
 
 all:
-	g++ -g -std=c++11 -c transactionDatabase.cpp -w
-	g++ -g -std=c++11 alterDB.cpp transactionDatabase.o -w -o alterDB
+	g++ -g -std=c++11 -c transactionDatabase.cpp algoFramework.cpp -w
+	g++ -g -std=c++11 alterDB.cpp transactionDatabase.o algoFramework.o -w -o alterDB
 
 clean:
 	rm -rf *.o
+	rm -rf *.out
 	rm -rf alterDB
