subtle changes, bugfixes

--- a/cpp-frame/makefile
+++ b/cpp-frame/makefile
@@ -1,9 +1,11 @@
 
 all:
 	g++ -g -std=c++11 -c transactionDatabase.cpp algoFramework.cpp -w
-	g++ -g -std=c++11 alterDB.cpp transactionDatabase.o algoFramework.o -w -o alterDB
+	g++ -g -std=c++11 alterDB.cpp transactionDatabase.o algoFramework.o -w -o switch
 
 clean:
 	rm -rf *.o
 	rm -rf *.out
-	rm -rf alterDB
+	rm -rf switch
+	rm -rf out*
+	rm -rf massif*
