the initial class for the map, need to eat

--- a/cpp-frame/udb/makefile
+++ b/cpp-frame/udb/makefile
@@ -1,6 +1,7 @@
 all:
-	g++ -g -std=c++11 -c uTransactionDatabase.cpp uItem.cpp tidAndProb.cpp uAlgoFramework.cpp -w
-	g++ -g -std=c++11 testDB.cpp uTransactionDatabase.o uItem.o tidAndProb.o uAlgoFramework.o -w -o switch
+	g++ -g -std=c++11 -c uTransactionDatabase.cpp uItem.cpp tidAndProb.cpp uAlgoFramework.cpp uTidset.cpp -w
+	#g++ -g -std=c++11 testDB.cpp uTransactionDatabase.o uItem.o tidAndProb.o uAlgoFramework.o -w -o switch
+	g++ -g -std=c++11 testDB.cpp uTransactionDatabase.o uItem.o tidAndProb.o uAlgoFramework.o uTidset.o -w -o testUTidset
 
 clean:
 	rm -rf *.o
