--- a/cpp-frame/makefile
+++ b/cpp-frame/makefile
@@ -1,9 +1,9 @@
 
 all:
-	# g++ -g -std=c++11 -c transactionDatabase.cpp algoFramework.cpp  llSet.cpp llSet_element.cpp -w
-	g++ -g -std=c++11 -c transactionDatabase.cpp llSet.cpp llSet_element.cpp -w
-	# g++ -g -std=c++11 alterDB.cpp transactionDatabase.o algoFramework.o -w -o switch
-	g++ -g -std=c++11 alterDB.cpp transactionDatabase.o llSet.o llSet_element.o -w -o switch
+	g++ -g -std=c++11 -c transactionDatabase.cpp algoFramework.cpp  llSet.cpp llSet_element.cpp -w
+	# g++ -g -std=c++11 -c transactionDatabase.cpp llSet.cpp llSet_element.cpp -w
+	g++ -g -std=c++11 alterDB.cpp transactionDatabase.o algoFramework.o llSet.o llSet_element.o -w -o switch
+	# g++ -g -std=c++11 alterDB.cpp transactionDatabase.o llSet.o llSet_element.o -w -o switch
 
 clean:
 	rm -rf *.o
